# evil_penguin_2

./: Cargo.toml  README.md
resources/assets/prefabs/: player.prefab.ron
resources/config/: display_config.ron  input_bindings.ron
src/: main.rs
src/components/: battery.component.rs  mod.rs  player.component.rs  run.component.rs
src/prefabs/: mod.rs  player.prefab.rs
src/resources/: mod.rs  mouse_movement.resource.rs  window_focused.resource.rs
src/states/: mod.rs  run.state.rs
src/states/menu/: mod.rs  start_menu.state.rs
src/systems/player/: mod.rs  player_battery_drain.system.rs  player_look.system.rs  player_movement.system.rs  player_toggle_flashlight.system.rs  player_toggle_run.system.rs
src/util/: constants.util.rs  mod.rs
